   console.

Dialplan functions
------------------
 * Addition of the VM_INFO function that can be used to retrieve voicemail
   user information, such as the email address and full name.
   The MAILBOX_EXISTS dialplan function has been deprecated in favour of
   VM_INFO.
 * The REDIRECTING function now supports the redirecting original party id
   and reason.

Followme changes
-------------
 * A new option, 'I' has been added to app_followme.
   By setting this option, Asterisk will not update the caller with
   connected line changes when they occur.  This is similar to app_dial
   and app_queue.
 * The 'N' option is now ignored if the call is already answered.

RTP changes
-------------
 * A new option, 'probation' has been added to rtp.conf
   RTP in strictrtp mode can now require more than 1 packet to exit learning
   mode with a new source (and by default requires 4). The probation option
   allows the user to change the required number of packets in sequence to any
   desired value. Use a value of 1 to essentially restore the old behavior.
   Also, with strictrtp on, Asterisk will now drop all packets until learning
   mode has successfully exited. These changes are based on how pjmedia handles
   media sources and source changes.

Text Messaging
--------------
 * MESSAGE(from) for incoming SIP messages now returns "display-name" <uri>
   instead of simply the uri.  This is the format that MessageSend() can use
   in the from parameter for outgoing SIP messages.

res_corosync
------------
 * A new module, res_corosync, has been introduced.  This module uses the
   Corosync cluster enginer (http://www.corosync.org) to allow a local cluster
   of Asterisk servers to both Message Waiting Indication (MWI) and/or
   Device State (presence) information.  This module is very similar to, and
   is a replacement for the res_ais module that was in previous releases of
   Asterisk.

AGI
---
 * A new channel variable, AGIEXITONHANGUP, has been added which allows